<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/tv_issue_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dim_issue_item_common_margin"
        android:layout_marginTop="@dimen/dim_issue_item_common_padding"
        android:layout_marginEnd="@dimen/dim_issue_item_common_margin"
        android:ellipsize="end"
        android:maxLines="1"
        android:text="@string/str_issue_title"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@id/btn_issue"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_issue_content"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ellipsize="end"
        android:maxLines="1"
        android:text="@string/str_issue_content"
        app:layout_constraintEnd_toEndOf="@id/tv_issue_title"
        app:layout_constraintStart_toStartOf="@id/tv_issue_title"
        app:layout_constraintTop_toBottomOf="@id/tv_issue_title" />

    <TextView
        android:id="@+id/tv_milestone"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dim_issue_item_common_padding"
        android:ellipsize="end"
        android:maxLines="1"
        android:text="@string/str_issue_milestone"
        app:drawableStartCompat="@drawable/baseline_calendar_today_24"
        app:layout_constraintEnd_toEndOf="@id/tv_issue_content"
        app:layout_constraintStart_toStartOf="@id/tv_issue_content"
        app:layout_constraintTop_toBottomOf="@id/tv_issue_content" />

    <HorizontalScrollView
        android:id="@+id/sv_labels"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dim_issue_item_common_padding"
        android:layout_marginBottom="@dimen/dim_issue_item_common_padding"
        app:layout_constraintEnd_toEndOf="@id/btn_issue"
        app:layout_constraintStart_toStartOf="@id/tv_milestone"
        app:layout_constraintTop_toBottomOf="@id/tv_milestone"
        app:layout_constraintBottom_toBottomOf="parent">

        <LinearLayout
            android:id="@+id/ll_labels"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"/>
    </HorizontalScrollView>

    <ImageButton
        android:id="@+id/btn_issue"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dim_issue_item_common_padding"
        android:layout_marginEnd="@dimen/dim_issue_item_common_padding"
        android:layout_marginBottom="@dimen/dim_issue_item_common_padding"
        android:background="@android:color/transparent"
        android:contentDescription="@string/str_issue_title"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_more_vert_24" />
</androidx.constraintlayout.widget.ConstraintLayout>